force-app/main/default/objects/Lot_paiement__c/Lot_paiement__c.object-meta.xml
<CustomObject>
    <label>Lot de paiement</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lot de paiements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>