force-app/main/default/objects/Lot_paiement__c/fields/Date_de_creation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_creation__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>