force-app/main/default/objects/Lot_paiement__c/fields/Date_paiement__c.field-meta.xml
<CustomField>
    <fullName>Date_paiement__c</fullName>
    <label>Date de paiement</label>
    <type>Date</type>
</CustomField>