force-app/main/default/objects/Lot_paiement__c/fields/Date_recuperation_solde_disponible_Ebury__c.field-meta.xml
<CustomField>
    <fullName>Date_recuperation_solde_disponible_Ebury__c</fullName>
    <label>Date récupération solde disponible Ebury</label>
    <type>DateTime</type>
</CustomField>