force-app/main/default/objects/Lot_paiement__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <formula>Plafond_autorise__c - Montant_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>