force-app/main/default/objects/Lot_paiement__c/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <label>Error message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>