force-app/main/default/objects/Lot_paiement__c/fields/etat__c.field-meta.xml
<CustomField>
    <fullName>etat__c</fullName>
    <label>État</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partiel</fullName>
            </value>
            <value>
                <fullName>Complet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>