force-app/main/default/objects/Lot_paiement__c/fields/ID_lot_paiement_ebury__c.field-meta.xml
<CustomField>
    <fullName>ID_lot_paiement_ebury__c</fullName>
    <externalId>true</externalId>
    <label>ID lot de paiement ebury</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>