force-app/main/default/objects/Lot_paiement__c/fields/Montant_total__c.field-meta.xml
<CustomField>
    <fullName>Montant_total__c</fullName>
    <label>Montant total en euros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>