force-app/main/default/objects/Lot_paiement__c/fields/Nombre_elements__c.field-meta.xml
<CustomField>
    <fullName>Nombre_elements__c</fullName>
    <label>Nombre d’éléments dans lot de paiement</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>