force-app/main/default/objects/Lot_paiement__c/fields/Nombre_lignes_rejetees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_lignes_rejetees__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de lignes rejetées</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>