force-app/main/default/objects/Lot_paiement__c/fields/Plafond_autorise__c.field-meta.xml
<CustomField>
    <fullName>Plafond_autorise__c</fullName>
    <defaultValue>550000</defaultValue>
    <label>Plafond autorisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>