force-app/main/default/objects/Lot_paiement__c/fields/Pret_Refacturation__c.field-meta.xml
<CustomField>
    <fullName>Pret_Refacturation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prêt Refacturation</label>
    <type>Checkbox</type>
</CustomField>