force-app/main/default/objects/Lot_paiement__c/fields/Solde_disponible_ebury__c.field-meta.xml
<CustomField>
    <fullName>Solde_disponible_ebury__c</fullName>
    <label>Solde disponible Ebury</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>