force-app/main/default/objects/Lot_paiement__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
                <default>true</default>
                <label>Qualification</label>
            </value>
            <value>
                <fullName>Pret</fullName>
                <label>Prêt</label>
            </value>
            <value>
                <fullName>Envoye Ebury</fullName>
                <label>Envoyé Ebury</label>
            </value>
            <value>
                <fullName>Traitement</fullName>
            </value>
            <value>
                <fullName>Confirmation</fullName>
            </value>
            <value>
                <fullName>Paiement</fullName>
            </value>
            <value>
                <fullName>Echec</fullName>
            </value>
            <value>
                <fullName>A payer</fullName>
                <isActive>false</isActive>
                <label>A payer</label>
            </value>
            <value>
                <fullName>A synchroniser</fullName>
                <isActive>false</isActive>
                <label>A synchroniser</label>
            </value>
            <value>
                <fullName>Echec paiement</fullName>
                <isActive>false</isActive>
                <label>Echec paiement</label>
            </value>
            <value>
                <fullName>En cours de synchronisation</fullName>
                <isActive>false</isActive>
                <label>En cours de synchronisation</label>
            </value>
            <value>
                <fullName>Payé</fullName>
                <isActive>false</isActive>
                <label>Payé</label>
            </value>
            <value>
                <fullName>Traité</fullName>
                <isActive>false</isActive>
                <label>Traité</label>
            </value>
            <value>
                <fullName>Validé</fullName>
                <isActive>false</isActive>
                <label>Validé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>