force-app/main/default/objects/Lot_paiement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Statut__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>